--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5118],[[4,5,6,0,[],[1,46,5067],[[7,8,9,0,[],[1,57,5045],[],[[10,0,0,[],[1,739,4357],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,41473],[[4,5,6,0,[],[1,53,41408],[[7,8,9,0,[],[1,57,41392],[],[[10,0,0,[],[1,809,5184],[]],[11,0,0,[],[1,6002,17007],[]],[12,0,0,[],[1,23014,18429],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Curso-Robot","*C:\\Users\\USUARIO\\Desktop\\projetos-qa\\robot-projeto-api\\curso-robot","*..","*Testes","*C:\\Users\\USUARIO\\Desktop\\projetos-qa\\robot-projeto-api\\curso-robot\\testes","*../testes","*Preenchimento Incorreto","*C:\\Users\\USUARIO\\Desktop\\projetos-qa\\robot-projeto-api\\curso-robot\\testes\\preenchimento_incorreto.robot","*../testes/preenchimento_incorreto.robot","*Verificar se quando um campo obrigatório não for preenchido corretamente o sistema exibe um mensagem de campo obrigatório"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Curso-Robot","*C:\\Users\\USUARIO\\Desktop\\projetos-qa\\robot-projeto-api\\curso-robot","*..","*Testes","*C:\\Users\\USUARIO\\Desktop\\projetos-qa\\robot-projeto-api\\curso-robot\\testes","*../testes","*Preenchimento Correto","*C:\\Users\\USUARIO\\Desktop\\projetos-qa\\robot-projeto-api\\curso-robot\\testes\\preenchimento_correto.robot","*../testes/preenchimento_correto.robot","*Verificar se ao preencher os campos do fomulário corretamente os dados são inseridos na lista e se um novo card é criado no time esperado","*Verificar se é possível criar mais de um card se preenchermos os campos corretamente","*Verificar se é possível criar um card para cada time disponível se preenchermos os campos corretamente"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Curso-Robot","name":"Curso-Robot","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"id":"s1-s1","label":"Curso-Robot.Testes","name":"Testes","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"id":"s1-s1-s1","label":"Curso-Robot.Testes.Preenchimento Incorreto","name":"Preenchimento Incorreto","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:41","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:41","fail":0,"id":"s1","label":"Curso-Robot","name":"Curso-Robot","pass":3,"skip":0},{"elapsed":"00:00:41","fail":0,"id":"s1-s1","label":"Curso-Robot.Testes","name":"Testes","pass":3,"skip":0},{"elapsed":"00:00:41","fail":0,"id":"s1-s1-s1","label":"Curso-Robot.Testes.Preenchimento Correto","name":"Preenchimento Correto","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1683639426731;
+window.output["baseMillis"] = 1683640690601;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5145;
+window.output["generated"] = 41519;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
